# asteroids

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  nginx.conf  package-lock.json  tsconfig.json  webpack.config.js
.github/workflows/: build-redeploy.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt  sample.env
backend/src/: __init__.py  models.py
backend/src/doc/: openapi.yml
backend/src/routes/: __init__.py  games_ressource.py  items_ressource.py  user_ressource.py
bindings/: GameRessource.ts  ItemLevelRessource.ts  ItemRessource.ts
deploy/: webapp-ing.yaml
deploy/backend/: database.yaml  deployment.yaml  service.yaml  volume.yaml
deploy/frontend/: deployment.yaml  service.yaml
frontend/: .gitignore  Cargo.toml  analysis_options.yaml  package.json
frontend/src/: lib.rs
frontend/src/model/: enemy.rs  error_message.rs  game.rs  game_ressources.rs  game_settings.rs  positioned.rs  shop.rs
frontend/src/model/game_settings/: field.rs  ship.rs
frontend/static/about/: index.html
frontend/static/game/: index.html
frontend/static/styles/: about.css  home.css  main.css
frontend/ts/: api.ts  elements.ts  index.ts  model.ts  view.ts  view_model.ts
src/: model.rs
src/model/: projectile.rs
static/: index.html
static/game/: index.html
static/styles/: fonts.css  game.css
ts/: elements.ts  hotkeys.ts  model.ts  view.ts  view_model.ts
