# You must change these to your own details.
[package]
name = "wasm-asteroids"
description = "The GameModel of Asteroids, written in Rust, compiled to WebAssembly, and running in the browser."
version = "0.1.0"
authors = ["Draculente <me@draculente.eu>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
# default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2" }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4", optional = true }
# reqwest-wasm = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
serde-wasm-bindgen = "0.5.0"
itertools = "0.11.0"
unique_id = "0.1.5"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11.19", features = ["json"] }
ts-rs = "7.0.0"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console", "Window", "Crypto"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.3"
